--- a/.htaccess
+++ b/.htaccess
@@ -3,11 +3,17 @@
 </FilesMatch>
 Access-Control-Allow-Origin: *
 Header set Access-Control-Allow-Origin 'origin-list'
-ErrorDocument 404 http://test-task.rf.gd/test-task/index.html
+ErrorDocument 404 http://test-task.rf.gd/
 RewriteEngine on
 
-RewriteCond %{QUERY_STRING} ^(.+)$
-RewriteRule ^(.*)$ $1%1? [L]
+# RewriteCond %{HTTP_HOST} ^www.test-task.rf.gd$ [NC]
+# RewriteRule ^(.*)$ http://test-task.rf.gd$1 [R=301,L]
+
+# RewriteCond %{QUERY_STRING} ^(.+)$
+# RewriteRule ^(.*)$ $1%1? [L]
+
+# RewriteCond %{SERVER_PORT} !^443$
+# RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
